# alimeeting-diarization-bench-final

./: .env.example  .gitignore  DOWNLOAD_MANIFEST.md  PAPER.md  README.md  SUBMISSION_MANIFEST.md  TECHNICAL_REPORT.md  pyproject.toml  requirements.txt
alimeeting_diarization_bench/: __main__.py  cli.py  collar_comparison.py  config.py  run.py
alimeeting_diarization_bench/data/: __init__.py  audio.py  ground_truth.py  manifests.py
alimeeting_diarization_bench/evaluation/: __init__.py  collar_comparison.py  runner.py
alimeeting_diarization_bench/final/: __init__.py  audit_baseline_headroom.py  audit_baseline_leaderboard.py  audit_clipped_baselines.py  audit_external_candidate_source_inventory.py  audit_realtime_batch_consistency.py  quick_start.py  (+24 more)
docs/: v4_progress_report.md
outputs/: final_effect_presentation.pptx
scripts/: README.md  analyze_abnormal_windows.py  analyze_clean_llm_disagreements.py  analyze_fast_slow_correction.py  analyze_latency_tradeoff.py  analyze_llm_guard_tuning.py  analyze_llm_policy_safety.py  analyze_llm_trigger_budget.py  analyze_llm_window_batch_safety.py  analyze_omni_acoustic_fusion.py  analyze_one_shot_identity_memory.py  analyze_realtime_contract_by_recording.py  analyze_results.py  analyze_runtime_safe_llm_guard.py  analyze_runtime_safe_llm_latency.py  analyze_segment_level_patches.py  analyze_voiceprint_memory.py  analyze_writeback_gate.py  analyze_writeback_impact.py  audit_baseline_headroom.py  audit_baseline_leaderboard.py  audit_clean_voiceprint_candidates.py  audit_clipped_baselines.py  audit_external_candidate_source_inventory.py  audit_realtime_batch_consistency.py  audit_recording_level_stability.py  audit_runtime_evidence_contract.py  audit_runtime_overlay_contributions.py  bootstrap_realtime_contract_metrics.py  build_asr_semantic_evidence.py  build_audio_window_features.py  build_deployable_abnormal_windows.py  build_der_latency_pareto.py  build_external_candidate_reproduction_plan.py  build_guard_model_comparison.py  build_latency_risk_margin_audit.py  build_latency_risk_mitigation_plan.py  build_live_agent_execution_plan.py  build_live_command_surface_audit.py  build_live_execution_bundle.py  (+119 more)
(+779 files in other folders)
