[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alimeeting-diarization-bench"
version = "0.1.0"
description = "Speaker diarization benchmark suite for AliMeeting corpus"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "meeteval>=0.4.0",
    "kaldialign>=0.8.0",
    "openai>=1.0.0",
    "dashscope>=1.14.0",
    "oss2>=2.18.0",
    "pyannote.audio>=3.1.0",
    "huggingface_hub>=0.17.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["alimeeting_diarization_bench*"]
